--- a/index.html
+++ b/index.html
@@ -23,26 +23,32 @@
       </ul>
     </header>
 
-    <div class="mainPgCntnt1">
-      <div class="terminalNavBar">
-        <ul>
-          <li><a href="#">File</a></li>
-          <li><a href="#">Edit</a></li>
-          <li><a href="#">View</a></li>
-        </ul>
-        <div>
-          <button type="button">&mdash;</button>
-          <button type="button">&EmptySmallSquare;</button>
-          <button class="btnRed" type="button">&Cross;</button>
-        </div>
-      </div>
-      <p class="code">&gt; var x = "Hello World!";<br>&gt; console.log(x.toUpperCase());</p>
-      <p><span class="aquaColor bold large">HELLO </span>WORLD!</p>
-      <p class="code">&gt; var name = "Kamil Chomiak"; <br> &gt; if (name === "Kamil Chomiak") { <br> &nbsp;&nbsp;&nbsp;&nbsp; var profession = "Aspiring Web Developer" <br> &nbsp; }; <br> &gt; console.log("My name is " + name + " and I'm an " + profession + "!");</p>
-      <p class="aquaColor bold large">My name is Kamil Chomiak and I'm an Aspiring Web Developer!</p>
-      <p class="code">&gt; <span class="blinking-cursor">|</span></p>
-      <h2><span class="purpleColor">@media</span> only screen and (max-width: <span id="dimensions"></span>)</h2>
+    <div class="bannerContainer">
+      <h3>Hello!<br>I'm Kamil.</h3>
     </div>
+
+    <div class="contentContainer">
+      <div class="mainPgCntnt1">
+        <div class="terminalNavBar">
+          <ul>
+            <li><a href="#">File</a></li>
+            <li><a href="#">Edit</a></li>
+            <li><a href="#">View</a></li>
+          </ul>
+          <div>
+            <button type="button">&mdash;</button>
+            <button type="button">&EmptySmallSquare;</button>
+            <button class="btnRed" type="button">&Cross;</button>
+          </div>
+        </div>
+        <p class="code">&gt; var x = "Hello World!";<br>&gt; console.log(x.toUpperCase());</p>
+        <p><span class="aquaColor bold large">HELLO </span>WORLD!</p>
+        <p class="code">&gt; var name = "Kamil Chomiak"; <br> &gt; if (name === "Kamil Chomiak") { <br> &nbsp;&nbsp;&nbsp;&nbsp; var profession = "Aspiring Web Developer" <br> &nbsp; }; <br> &gt; console.log("My name is " + name + " and I'm an " + profession + "!");</p>
+        <p class="aquaColor bold large">My name is Kamil Chomiak and I'm an Aspiring Web Developer!</p>
+        <p class="code">&gt; <span class="blinking-cursor">|</span></p>
+        <h2><span class="purpleColor">@media</span> only screen and (max-width: <span id="dimensions"></span>)</h2>
+      </div>
+  </div>
 
     <div>
       <img src="img/mac.jpeg">
