updated banner and added content container for about

--- a/index.html
+++ b/index.html
@@ -17,16 +17,17 @@
     <header>
       <h2>Kamil Chomiak</h2>
       <ul>
-        <li><a href="about.html">About</a></li>
+        <li><a href="index.html#about">About</a></li>
         <li><a href="work.html">Work</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </header>
 
     <div class="bannerContainer">
-      <h3>Hello!<br>I'm Kamil.</h3>
+      <h3><span class="htmlText">&lt;h1&gt;</span>Hello!<span class="htmlText">&lt;br&gt;</span><br>I'm Kamil.<span class="htmlText">&lt;/h1&gt;</span></h3>
     </div>
 
+    <a id="about"></a>
     <div class="contentContainer">
       <div class="mainPgCntnt1">
         <div class="terminalNavBar">
@@ -41,6 +42,7 @@
             <button class="btnRed" type="button">&Cross;</button>
           </div>
         </div>
+        <div class="scrollContainer">
         <p class="code">&gt; var x = "Hello World!";<br>&gt; console.log(x.toUpperCase());</p>
         <p><span class="aquaColor bold large">HELLO </span>WORLD!</p>
         <p class="code">&gt; var name = "Kamil Chomiak"; <br> &gt; if (name === "Kamil Chomiak") { <br> &nbsp;&nbsp;&nbsp;&nbsp; var profession = "Aspiring Web Developer" <br> &nbsp; }; <br> &gt; console.log("My name is " + name + " and I'm an " + profession + "!");</p>
@@ -48,10 +50,13 @@
         <p class="code">&gt; <span class="blinking-cursor">|</span></p>
         <h2><span class="purpleColor">@media</span> only screen and (max-width: <span id="dimensions"></span>)</h2>
       </div>
+      </div>
+      <div class="mainPgCntnt2">
+      </div>
   </div>
 
     <div>
-      <img src="img/mac.jpeg">
+      <img src="img/mac.jpeg" style="width: 100%;">
     </div>
 
 
