Added work section/adjusted layout

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <h2>Kamil Chomiak</h2>
       <ul>
         <li><a href="index.html#about">About</a></li>
-        <li><a href="work.html">Work</a></li>
+        <li><a href="index.html#work">Work</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </header>
@@ -53,6 +53,30 @@
       </div>
       <div class="mainPgCntnt2">
       </div>
+  </div>
+
+  <a id="work"></a>
+  <div class="workContainer">
+    <div class="workHeading">
+      <h1><span>My Work</span></h1>
+    </div>
+    <div class="workExamples1">
+      <div class="example">
+        <img src="img/example1.png" alt="Archer's Tavern Web Site">
+      </div>
+      <div class="example">
+      </div>
+      <div class="example">
+      </div>
+    </div>
+    <div class="workExamples2">
+      <div class="example">
+      </div>
+      <div class="example">
+      </div>
+      <div class="example">
+      </div>
+    </div>
   </div>
 
     <div>
