Added contact section

--- a/index.html
+++ b/index.html
@@ -65,22 +65,29 @@
         <img src="img/example1.png" alt="Archer's Tavern Web Site">
       </div>
       <div class="example">
+        <img src="img/example1.png" alt="Archer's Tavern Web Site">
       </div>
       <div class="example">
+        <img src="img/example1.png" alt="Archer's Tavern Web Site">
       </div>
     </div>
     <div class="workExamples2">
       <div class="example">
+        <img src="img/example1.png" alt="Archer's Tavern Web Site">
       </div>
       <div class="example">
+        <img src="img/example1.png" alt="Archer's Tavern Web Site">
       </div>
       <div class="example">
+        <img src="img/example1.png" alt="Archer's Tavern Web Site">
       </div>
     </div>
   </div>
 
-    <div>
-      <img src="img/mac.jpeg" style="width: 100%;">
+    <div class="contactContainer">
+      <div class="contactHeading">
+        <h1><span>Contact Me</span></h1>
+      </div>
     </div>
 
 
